[package]
name = "multitest"
version = "0.0.1"
authors = ["Dariusz Depta <DariuszDepta@users.noreply.github.com>"]
description = "Do not use yet - work in progress"
repository = "https://github.com/DariuszDepta/multitest.git"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
backtrace = ["anyhow/backtrace"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]

[dependencies]
anyhow = "1.0.80"
bech32 = "0.9.1"
cosmwasm-std = { version = "1.5.3", features = ["iterator", "staking", "stargate"] }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
derivative = "2.2.0"
itertools = "0.12.1"
prost = "0.12.3"
schemars = "0.8.16"
serde = "1.0.196"
sha2 = "0.10.8"
thiserror = "1.0.57"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
